app/styles/app.scss
@import 'bourbon';
@import 'frost/variables';
@import 'frost/app';
@import 'frost/patterns';

@import 'whirly';

@import './application';
@import './introduction';
@import './api-ember-frost-button';
@import 'app/pods/components/frost-navigation-sidebar-category/styles';
@import 'app/pods/components/frost-navigation-sidebar-menu/styles';
@import 'app/pods/components/frost-sidebar/styles';
@import 'app/pods/components/guide-coming-soon/styles';

body {
  font-family: 'Roboto', sans-serif;
  font-size: 14px;
  font-weight: 300;
  line-height: 20px;
  color: $frost-color-grey-3;
}

.guide-markdown {
  pre {
  padding: 10px;
  background-color: $frost-color-lgrey-3;
  }

}

.guide-content {
  .frost-tabs {
  @include flex(1);
  @include display(flex);
  @include flex-direction(column);

  .content {
    @include flex(1);
    @include display(flex);
    @include flex-direction(column);

    .frost-tab {
    @include flex(1);
    @include display(flex);
    @include flex-direction(column);
    }
  }
  }

  .guide-iframe {
  @include flex(1);
  @include display(flex);
  @include flex-direction(column);
  }

  .api,
  .demo {
    .guide-iframe iframe {
      @include flex(1);
      width: 100%;
      border: none;
    }
  }

  .description {
  @include flex(1);
  @include display(flex);
  @include flex-direction(column);

  .guide-iframe iframe {
    @include flex(1);
    width: 900px;
    border: none;
  }
  }
}

.footer {
  background-color: $frost-color-blue-1;
  width: 100%;
  height:100%;
  color: $frost-color-white;
  clear:both;
  margin-top: 50px;
  visibility: hidden;
}

.footer .info{
  margin-left: 20px;
  margin-right: 20px;
  margin-top: 20px;
  margin-bottom: 10px;
  font-size: 18px;
}

.footer .info br{
  clear: left;
}

.footer .copyright{
  padding-top: 10px;
  padding-left: 20px;
  padding-bottom: 10px;
  background-color: darken($frost-color-blue-1, 4%);
  height: 100%;
}

.footerHeading {
  display: block;
  margin: 0 0 20px 0;
  padding: 0;
  border: none;
  font-size: 29px;
}

.contributors{
  float: left;
  width: 60%;
}
.connect{
  float: left;
  width: 40%;
}
.contributors table{
  font-size: 16px;
  width: 100%;
}
.contributors table td{
  width: 33%
}

